@@ -23,6 +23,8 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.common.collect.Lists;
 import io.airbyte.analytics.TrackingClient;
 import io.airbyte.api.model.generated.ActorDefinitionRequestBody;
@@ -83,15 +85,23 @@ import io.airbyte.api.problems.model.generated.MapperValidationProblemResponse;
 import io.airbyte.api.problems.model.generated.ProblemMapperErrorData;
 import io.airbyte.api.problems.model.generated.ProblemMapperErrorDataMapper;
 import io.airbyte.api.problems.throwable.generated.ConnectionDoesNotSupportFileTransfersProblem;
+import io.airbyte.api.problems.throwable.generated.DestinationCatalogInvalidAdditionalFieldProblem;
+import io.airbyte.api.problems.throwable.generated.DestinationCatalogInvalidOperationProblem;
+import io.airbyte.api.problems.throwable.generated.DestinationCatalogMissingObjectNameProblem;
+import io.airbyte.api.problems.throwable.generated.DestinationCatalogMissingRequiredFieldProblem;
+import io.airbyte.api.problems.throwable.generated.DestinationCatalogRequiredProblem;
 import io.airbyte.api.problems.throwable.generated.LicenseEntitlementProblem;
 import io.airbyte.api.problems.throwable.generated.MapperValidationProblem;
 import io.airbyte.api.problems.throwable.generated.StreamDoesNotSupportFileTransfersProblem;
-import io.airbyte.commons.constants.DataplaneConstantsKt;
 import io.airbyte.commons.converters.CommonConvertersKt;
 import io.airbyte.commons.converters.ConnectionHelper;
 import io.airbyte.commons.entitlements.Entitlement;
+import io.airbyte.commons.entitlements.EntitlementService;
 import io.airbyte.commons.entitlements.LicenseEntitlementChecker;
+import io.airbyte.commons.entitlements.models.EntitlementResult;
+import io.airbyte.commons.entitlements.models.PlatformSubOneHourSyncFrequency;
 import io.airbyte.commons.enums.Enums;
+import io.airbyte.commons.jackson.MoreMappers;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.server.converters.ApiPojoConverters;
 import io.airbyte.commons.server.converters.ConfigurationUpdate;
@@ -120,14 +130,16 @@ import io.airbyte.config.AttemptFailureSummary;
 import io.airbyte.config.AttemptStatus;
 import io.airbyte.config.AttemptWithJobInfo;
 import io.airbyte.config.BasicSchedule;
-import io.airbyte.config.ConfigSchema;
+import io.airbyte.config.ConfigNotFoundType;
 import io.airbyte.config.Configs;
 import io.airbyte.config.ConfiguredAirbyteCatalog;
 import io.airbyte.config.ConfiguredAirbyteStream;
 import io.airbyte.config.ConnectionContext;
 import io.airbyte.config.Cron;
 import io.airbyte.config.DataType;
+import io.airbyte.config.DestinationCatalog;
 import io.airbyte.config.DestinationConnection;
+import io.airbyte.config.DestinationOperation;
 import io.airbyte.config.FailureReason;
 import io.airbyte.config.FieldSelectionData;
 import io.airbyte.config.Job;
@@ -173,18 +185,20 @@ import io.airbyte.config.persistence.helper.CatalogGenerationSetter;
 import io.airbyte.config.secrets.JsonSecretsProcessor;
 import io.airbyte.config.secrets.SecretsRepositoryReader;
 import io.airbyte.config.secrets.SecretsRepositoryWriter;
-import io.airbyte.data.exceptions.ConfigNotFoundException;
+import io.airbyte.data.ConfigNotFoundException;
 import io.airbyte.data.helpers.ActorDefinitionVersionUpdater;
 import io.airbyte.data.services.CatalogService;
 import io.airbyte.data.services.ConnectionService;
 import io.airbyte.data.services.ConnectionTimelineEventService;
 import io.airbyte.data.services.DestinationService;
+import io.airbyte.data.services.PartialUserConfigService;
 import io.airbyte.data.services.SourceService;
 import io.airbyte.data.services.StreamStatusesService;
 import io.airbyte.data.services.WorkspaceService;
 import io.airbyte.domain.services.secrets.SecretPersistenceService;
 import io.airbyte.domain.services.secrets.SecretReferenceService;
 import io.airbyte.domain.services.secrets.SecretStorageService;
+import io.airbyte.featureflag.EnableDestinationCatalogValidation;
 import io.airbyte.featureflag.ResetStreamsStateWhenDisabled;
 import io.airbyte.featureflag.TestClient;
 import io.airbyte.featureflag.ValidateConflictingDestinationStreams;
@@ -199,8 +213,8 @@ import io.airbyte.metrics.MetricClient;
 import io.airbyte.persistence.job.JobPersistence;
 import io.airbyte.persistence.job.WorkspaceHelper;
 import io.airbyte.persistence.job.factory.OAuthConfigSupplier;
-import io.airbyte.protocol.models.Field;
 import io.airbyte.protocol.models.JsonSchemaType;
+import io.airbyte.protocol.models.v0.Field;
 import io.airbyte.validation.json.JsonSchemaValidator;
 import io.airbyte.validation.json.JsonValidationException;
 import java.io.IOException;
@@ -229,7 +243,6 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
-import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.MockedStatic;
@@ -238,6 +251,7 @@ import org.mockito.Mockito;
 @SuppressWarnings("PMD.AvoidDuplicateLiterals")
 class ConnectionsHandlerTest {
 
+  private static final String SCOPE = "abc";
   private static final String PRESTO_TO_HUDI = "presto to hudi";
   private static final String PRESTO_TO_HUDI_PREFIX = "presto_to_hudi";
   private static final String SOURCE_TEST = "source-test";
@@ -278,6 +292,7 @@ class ConnectionsHandlerTest {
   private EventRunner eventRunner;
   private ConnectionHelper connectionHelper;
   private TestClient featureFlagClient;
+  private EntitlementService entitlementService;
   private ActorDefinitionVersionHelper actorDefinitionVersionHelper;
   private ActorDefinitionVersionUpdater actorDefinitionVersionUpdater;
   private ConnectorDefinitionSpecificationHandler connectorDefinitionSpecificationHandler;
@@ -313,7 +328,7 @@ class ConnectionsHandlerTest {
   private ConnectionScheduleHelper connectionSchedulerHelper;
   private LicenseEntitlementChecker licenseEntitlementChecker;
   private ContextBuilder contextBuilder;
-  private final CatalogConverter catalogConverter = new CatalogConverter(new FieldGenerator(), Collections.singletonList(new HashingMapper()));
+  private final CatalogConverter catalogConverter = new CatalogConverter(new FieldGenerator(), List.of(new HashingMapper(MoreMappers.initMapper())));
   private final ApplySchemaChangeHelper applySchemaChangeHelper = new ApplySchemaChangeHelper(catalogConverter);
   private final ApiPojoConverters apiPojoConverters = new ApiPojoConverters(catalogConverter);
   private final CronExpressionHelper cronExpressionHelper = new CronExpressionHelper();
@@ -322,6 +337,7 @@ class ConnectionsHandlerTest {
   private SecretStorageService secretStorageService;
   private SecretReferenceService secretReferenceService;
   private CurrentUserService currentUserService;
+  private PartialUserConfigService partialUserConfigService;
 
   @SuppressWarnings("unchecked")
   @BeforeEach
@@ -366,7 +382,6 @@ class ConnectionsHandlerTest {
         .withScheduleData(ConnectionHelpers.generateBasicScheduleData())
         .withResourceRequirements(ConnectionHelpers.TESTING_RESOURCE_REQUIREMENTS)
         .withSourceCatalogId(UUID.randomUUID())
-        .withGeography(DataplaneConstantsKt.GEOGRAPHY_AUTO)
         .withNotifySchemaChanges(false)
         .withNotifySchemaChangesByEmail(true)
         .withBreakingChange(false)
@@ -389,7 +404,6 @@ class ConnectionsHandlerTest {
         .withScheduleData(ConnectionHelpers.generateBasicScheduleData())
         .withResourceRequirements(ConnectionHelpers.TESTING_RESOURCE_REQUIREMENTS)
         .withSourceCatalogId(UUID.randomUUID())
-        .withGeography(DataplaneConstantsKt.GEOGRAPHY_AUTO)
         .withNotifySchemaChanges(false)
         .withNotifySchemaChangesByEmail(true)
         .withBreakingChange(false);
@@ -406,8 +420,7 @@ class ConnectionsHandlerTest {
         .withOperationIds(List.of(operationId))
         .withManual(false)
         .withSchedule(ConnectionHelpers.generateBasicSchedule())
-        .withResourceRequirements(ConnectionHelpers.TESTING_RESOURCE_REQUIREMENTS)
-        .withGeography(DataplaneConstantsKt.GEOGRAPHY_US);
+        .withResourceRequirements(ConnectionHelpers.TESTING_RESOURCE_REQUIREMENTS);
 
     jobPersistence = mock(JobPersistence.class);
     streamRefreshesHandler = mock(StreamRefreshesHandler.class);
@@ -441,6 +454,7 @@ class ConnectionsHandlerTest {
     contextBuilder = mock(ContextBuilder.class);
 
     featureFlagClient = mock(TestClient.class);
+    entitlementService = mock(EntitlementService.class);
     metricClient = mock(MetricClient.class);
     secretsRepositoryWriter = mock(SecretsRepositoryWriter.class);
     secretStorageService = mock(SecretStorageService.class);
@@ -490,9 +504,10 @@ class ConnectionsHandlerTest {
         secretsRepositoryWriter,
         secretStorageService,
         secretReferenceService,
-        currentUserService);
+        currentUserService, partialUserConfigService);
 
-    connectionSchedulerHelper = new ConnectionScheduleHelper(apiPojoConverters, cronExpressionHelper, featureFlagClient, workspaceHelper);
+    connectionSchedulerHelper =
+        new ConnectionScheduleHelper(apiPojoConverters, cronExpressionHelper, featureFlagClient, entitlementService, workspaceHelper);
     matchSearchHandler =
         new MatchSearchHandler(destinationHandler, sourceHandler, sourceService, destinationService, connectionService, apiPojoConverters);
     featureFlagClient = mock(TestClient.class);
@@ -553,8 +568,7 @@ class ConnectionsHandlerTest {
           mapperSecretHelper,
           metricClient,
           licenseEntitlementChecker,
-          contextBuilder,
-          Configs.AirbyteEdition.COMMUNITY);
+          contextBuilder);
 
       when(uuidGenerator.get()).thenReturn(standardSync.getConnectionId());
       final StandardSourceDefinition sourceDefinition = new StandardSourceDefinition()
@@ -596,10 +610,10 @@ class ConnectionsHandlerTest {
       when(jobPersistence.getJob(jobId)).thenReturn(new Job(
           jobId,
           ConfigType.SYNC,
-          null,
-          null,
-          null,
-          null,
+          SCOPE,
+          new JobConfig(),
+          List.of(),
+          JobStatus.PENDING,
           null,
           0,
           0,
@@ -633,10 +647,10 @@ class ConnectionsHandlerTest {
       when(jobPersistence.getJob(jobId)).thenReturn(new Job(
           jobId,
           ConfigType.REFRESH,
-          null,
+          SCOPE,
           config,
-          null,
-          null,
+          List.of(),
+          JobStatus.PENDING,
           null,
           0,
           0,
@@ -670,10 +684,10 @@ class ConnectionsHandlerTest {
       when(jobPersistence.getJob(jobId)).thenReturn(new Job(
           jobId,
           ConfigType.RESET_CONNECTION,
-          null,
+          SCOPE,
           config,
-          null,
-          null,
+          List.of(),
+          JobStatus.PENDING,
           null,
           0,
           0,
@@ -773,7 +787,6 @@ class ConnectionsHandlerTest {
           .withOperationIds(List.of(operationId))
           .withManual(true)
           .withResourceRequirements(ConnectionHelpers.TESTING_RESOURCE_REQUIREMENTS)
-          .withGeography(DataplaneConstantsKt.GEOGRAPHY_US)
           .withBreakingChange(false)
           .withNotifySchemaChanges(false)
           .withNotifySchemaChangesByEmail(true);
@@ -1057,7 +1070,7 @@ class ConnectionsHandlerTest {
                 .memoryRequest(standardSync.getResourceRequirements().getMemoryRequest())
                 .memoryLimit(standardSync.getResourceRequirements().getMemoryLimit()))
             .sourceCatalogId(standardSync.getSourceCatalogId())
-            .geography(standardSync.getGeography())
+            .destinationCatalogId(standardSync.getDestinationCatalogId())
             .notifySchemaChanges(standardSync.getNotifySchemaChanges())
             .notifySchemaChangesByEmail(standardSync.getNotifySchemaChangesByEmail())
             .backfillPreference(Enums.convertTo(standardSync.getBackfillPreference(), SchemaChangeBackfillPreference.class));
@@ -1069,12 +1082,8 @@ class ConnectionsHandlerTest {
 
         final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
 
-        // set a defaultGeography on the workspace as EU, but expect connection to be
-        // created AUTO because the ConnectionCreate geography takes precedence over the workspace
-        // defaultGeography.
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final ConnectionCreate connectionCreate = buildConnectionCreateRequest(standardSync, catalog);
@@ -1106,8 +1115,7 @@ class ConnectionsHandlerTest {
         final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
 
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final ConnectionCreate connectionCreate = buildConnectionCreateRequest(standardSync, catalog);
@@ -1133,40 +1141,10 @@ class ConnectionsHandlerTest {
       }
 
       @Test
-      void testCreateConnectionUsesDefaultGeographyFromWorkspace()
-          throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
-
-        when(workspaceHelper.getWorkspaceForSourceId(sourceId)).thenReturn(workspaceId);
-
-        final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
-
-        // don't set a geography on the ConnectionCreate to force inheritance from workspace default
-        final ConnectionCreate connectionCreate = buildConnectionCreateRequest(standardSync, catalog).geography(null);
-
-        // set the workspace default to EU
-        final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
-        when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
-
-        // the expected read and verified write is generated from the standardSync, so set this to EU as
-        // well
-        standardSync.setGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
-
-        final ConnectionRead expectedConnectionRead = ConnectionHelpers.generateExpectedConnectionRead(standardSync);
-        final ConnectionRead actualConnectionRead = connectionsHandler.createConnection(connectionCreate);
-
-        assertEquals(expectedConnectionRead, actualConnectionRead);
-        verify(connectionService).writeStandardSync(standardSync
-            .withNotifySchemaChangesByEmail(null));
-      }
-
-      @Test
       void testCreateConnectionWithSelectedFields()
           throws IOException, JsonValidationException, ConfigNotFoundException, io.airbyte.config.persistence.ConfigNotFoundException {
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_AUTO);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final AirbyteCatalog catalogWithSelectedFields = ConnectionHelpers.generateApiCatalogWithTwoFields();
@@ -1191,8 +1169,7 @@ class ConnectionsHandlerTest {
       void testCreateConnectionWithHashedFields()
           throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
@@ -1213,8 +1190,7 @@ class ConnectionsHandlerTest {
       void testCreateConnectionWithMappers()
           throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final UUID newMapperId = UUID.randomUUID();
@@ -1237,6 +1213,28 @@ class ConnectionsHandlerTest {
         verify(connectionService).writeStandardSync(standardSync.withNotifySchemaChangesByEmail(null));
       }
 
+      @Test
+      void testCreateConnectionWithDestinationCatalog()
+          throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
+        final StandardWorkspace workspace = new StandardWorkspace()
+            .withWorkspaceId(workspaceId);
+        when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
+
+        final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
+
+        final UUID destinationCatalogId = UUID.randomUUID();
+        final ConnectionCreate connectionCreate = buildConnectionCreateRequest(standardSync, catalog)
+            .destinationCatalogId(destinationCatalogId);
+
+        final ConnectionRead actualConnectionRead = connectionsHandler.createConnection(connectionCreate);
+
+        final ConnectionRead expectedConnectionRead = ConnectionHelpers.generateExpectedConnectionRead(standardSync);
+        assertEquals(expectedConnectionRead, actualConnectionRead);
+
+        standardSync.withDestinationCatalogId(destinationCatalogId);
+        verify(connectionService).writeStandardSync(standardSync.withNotifySchemaChangesByEmail(null));
+      }
+
       @ParameterizedTest
       @CsvSource({
         "true, true, true", // all supported
@@ -1250,8 +1248,7 @@ class ConnectionsHandlerTest {
                                                      final boolean streamSupportsFiles)
           throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
@@ -1282,8 +1279,7 @@ class ConnectionsHandlerTest {
       @Test
       void testCreateConnectionValidatesMappers() throws JsonValidationException, ConfigNotFoundException, IOException {
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
@@ -1338,8 +1334,7 @@ class ConnectionsHandlerTest {
       void testCreateFullRefreshConnectionWithSelectedFields()
           throws IOException, JsonValidationException, ConfigNotFoundException, io.airbyte.config.persistence.ConfigNotFoundException {
         final StandardWorkspace workspace = new StandardWorkspace()
-            .withWorkspaceId(workspaceId)
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_AUTO);
+            .withWorkspaceId(workspaceId);
         when(workspaceService.getStandardWorkspaceNoSecrets(workspaceId, true)).thenReturn(workspace);
 
         final AirbyteCatalog fullRefreshCatalogWithSelectedFields = ConnectionHelpers.generateApiCatalogWithTwoFields();
@@ -1506,9 +1501,9 @@ class ConnectionsHandlerTest {
         final UUID destinationIdBad = UUID.randomUUID();
 
         when(sourceService.getSourceConnection(sourceIdBad))
-            .thenThrow(new ConfigNotFoundException(ConfigSchema.SOURCE_CONNECTION, sourceIdBad));
+            .thenThrow(new ConfigNotFoundException(ConfigNotFoundType.SOURCE_CONNECTION, sourceIdBad));
         when(destinationService.getDestinationConnection(destinationIdBad))
-            .thenThrow(new ConfigNotFoundException(ConfigSchema.DESTINATION_CONNECTION, destinationIdBad));
+            .thenThrow(new ConfigNotFoundException(ConfigNotFoundType.DESTINATION_CONNECTION, destinationIdBad));
 
         final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
 
@@ -1549,6 +1544,52 @@ class ConnectionsHandlerTest {
         when(catalogValidator.fieldCount(eq(catalog), any())).thenReturn(new ValidationError("bad catalog"));
 
         assertThrows(BadRequestException.class, () -> connectionsHandler.createConnection(request));
+      }
+
+      @ParameterizedTest
+      @CsvSource({
+        "true, true, true, true", // feature flag enabled, destination supports data activation, has destination catalog
+        "true, true, false, false", // feature flag enabled, destination supports data activation, no destination catalog - should throw
+        "true, false, false, true", // feature flag enabled, destination doesn't support data activation, no destination catalog
+        "false, true, true, true", // feature flag disabled, destination supports data activation, has destination catalog
+        "false, true, false, true", // feature flag disabled, destination supports data activation, no destination catalog
+        "false, false, false, true", // feature flag disabled, destination doesn't support data activation, no destination catalog
+      })
+      void testCreateConnectionValidatesDestinationCatalog(final boolean featureFlagEnabled,
+                                                           final boolean destinationSupportsDataActivation,
+                                                           final boolean hasDestinationCatalog,
+                                                           final boolean shouldSucceed)
+          throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
+        final UUID destinationCatalogIdInCreate = hasDestinationCatalog ? UUID.randomUUID() : null;
+
+        final AirbyteCatalog catalogForCreate = ConnectionHelpers.generateBasicApiCatalog();
+        final ConnectionCreate connectionCreate = buildConnectionCreateRequest(standardSync, catalogForCreate);
+        if (hasDestinationCatalog) {
+          connectionCreate.destinationCatalogId(destinationCatalogIdInCreate);
+          when(catalogService.getActorCatalogById(destinationCatalogIdInCreate))
+              .thenReturn(new ActorCatalog().withId(destinationCatalogIdInCreate).withCatalog(Jsons.emptyObject()));
+          when(connectionService.getStandardSync(standardSync.getConnectionId()))
+              .thenReturn(Jsons.clone(standardSync).withDestinationCatalogId(destinationCatalogIdInCreate));
+        }
+
+        when(featureFlagClient.boolVariation(EnableDestinationCatalogValidation.INSTANCE, new Workspace(workspaceId)))
+            .thenReturn(featureFlagEnabled);
+        when(actorDefinitionVersionHelper.getSourceVersion(any(), any(), any())).thenReturn(
+            new ActorDefinitionVersion().withSupportsDataActivation(false));
+        when(actorDefinitionVersionHelper.getDestinationVersion(any(), any(), any())).thenReturn(
+            new ActorDefinitionVersion().withSupportsDataActivation(destinationSupportsDataActivation));
+
+        if (shouldSucceed) {
+          // Connection should be created successfully
+          final ConnectionRead actualRead = connectionsHandler.createConnection(connectionCreate);
+          final ConnectionRead expectedRead = ConnectionHelpers.generateExpectedConnectionRead(standardSync)
+              .syncCatalog(catalogForCreate)
+              .destinationCatalogId(destinationCatalogIdInCreate);
+          assertEquals(expectedRead, actualRead);
+        } else {
+          // Should throw DestinationCatalogRequiredProblem
+          assertThrows(DestinationCatalogRequiredProblem.class, () -> connectionsHandler.createConnection(connectionCreate));
+        }
       }
 
     }
@@ -1593,7 +1634,6 @@ class ConnectionsHandlerTest {
             .withScheduleData(ConnectionHelpers.generateBasicScheduleData())
             .withResourceRequirements(ConnectionHelpers.TESTING_RESOURCE_REQUIREMENTS)
             .withSourceCatalogId(UUID.randomUUID())
-            .withGeography(DataplaneConstantsKt.GEOGRAPHY_AUTO)
             .withNotifySchemaChanges(false)
             .withNotifySchemaChangesByEmail(true)
             .withBreakingChange(false);
@@ -1646,151 +1686,6 @@ class ConnectionsHandlerTest {
         assertEquals(expectedRead, actualConnectionRead);
         verify(connectionService).writeStandardSync(expectedPersistedSync);
         verify(eventRunner).update(connectionUpdate.getConnectionId());
-      }
-
-      @ParameterizedTest
-      @EnumSource(Configs.AirbyteEdition.class)
-      void testUpdateConnectionPatchGeographyByAirbyteEdition(final Configs.AirbyteEdition airbyteEdition) throws Exception {
-        final ConnectionUpdate connectionUpdate = new ConnectionUpdate()
-            .connectionId(standardSync.getConnectionId())
-            .name("newName")
-            .geography(DataplaneConstantsKt.GEOGRAPHY_AUTO);
-
-        final StandardSync expectedPersistedSync = Jsons.clone(standardSync)
-            .withName("newName")
-            .withGeography(airbyteEdition == Configs.AirbyteEdition.CLOUD ? DataplaneConstantsKt.GEOGRAPHY_US : DataplaneConstantsKt.GEOGRAPHY_AUTO);
-
-        new ConnectionsHandler(
-            streamRefreshesHandler,
-            jobPersistence,
-            catalogService,
-            uuidGenerator,
-            workspaceHelper,
-            trackingClient,
-            eventRunner,
-            connectionHelper,
-            featureFlagClient,
-            actorDefinitionVersionHelper,
-            connectorDefinitionSpecificationHandler,
-            streamGenerationRepository,
-            catalogGenerationSetter,
-            catalogValidator,
-            notificationHelper,
-            streamStatusesService,
-            connectionTimelineEventService,
-            connectionTimelineEventHelper,
-            statePersistence,
-            sourceService,
-            destinationService,
-            connectionService,
-            workspaceService,
-            destinationCatalogGenerator,
-            catalogConverter,
-            applySchemaChangeHelper,
-            apiPojoConverters,
-            connectionSchedulerHelper,
-            mapperSecretHelper,
-            metricClient,
-            licenseEntitlementChecker,
-            contextBuilder,
-            airbyteEdition).applyPatchToStandardSync(standardSync, connectionUpdate, UUID.randomUUID());
-
-        assertEquals(expectedPersistedSync, standardSync);
-      }
-
-      @ParameterizedTest
-      @EnumSource(Configs.AirbyteEdition.class)
-      void testGetGeographyFromConnectionCreateOrWorkspace(final Configs.AirbyteEdition airbyteEdition) throws Exception {
-        final ConnectionCreate connectionCreate = new ConnectionCreate()
-            .name("newName")
-            .geography(DataplaneConstantsKt.GEOGRAPHY_AUTO);
-
-        final String geography = new ConnectionsHandler(
-            streamRefreshesHandler,
-            jobPersistence,
-            catalogService,
-            uuidGenerator,
-            workspaceHelper,
-            trackingClient,
-            eventRunner,
-            connectionHelper,
-            featureFlagClient,
-            actorDefinitionVersionHelper,
-            connectorDefinitionSpecificationHandler,
-            streamGenerationRepository,
-            catalogGenerationSetter,
-            catalogValidator,
-            notificationHelper,
-            streamStatusesService,
-            connectionTimelineEventService,
-            connectionTimelineEventHelper,
-            statePersistence,
-            sourceService,
-            destinationService,
-            connectionService,
-            workspaceService,
-            destinationCatalogGenerator,
-            catalogConverter,
-            applySchemaChangeHelper,
-            apiPojoConverters,
-            connectionSchedulerHelper,
-            mapperSecretHelper,
-            metricClient,
-            licenseEntitlementChecker,
-            contextBuilder,
-            airbyteEdition).getGeographyFromConnectionCreateOrWorkspace(connectionCreate);
-
-        assertEquals(airbyteEdition == Configs.AirbyteEdition.CLOUD ? DataplaneConstantsKt.GEOGRAPHY_US : DataplaneConstantsKt.GEOGRAPHY_AUTO,
-            geography);
-      }
-
-      @ParameterizedTest
-      @EnumSource(Configs.AirbyteEdition.class)
-      void testGetGeographyFromConnectionCreateOrWorkspaceNoConnectionGeography(final Configs.AirbyteEdition airbyteEdition) throws Exception {
-        final ConnectionCreate connectionCreate = new ConnectionCreate()
-            .name("newName");
-
-        when(workspaceService.getStandardWorkspaceNoSecrets(any(), eq(true))).thenReturn(new StandardWorkspace()
-            .withWorkspaceId(UUID.randomUUID())
-            .withDefaultGeography(DataplaneConstantsKt.GEOGRAPHY_AUTO));
-
-        final String geography = new ConnectionsHandler(
-            streamRefreshesHandler,
-            jobPersistence,
-            catalogService,
-            uuidGenerator,
-            workspaceHelper,
-            trackingClient,
-            eventRunner,
-            connectionHelper,
-            featureFlagClient,
-            actorDefinitionVersionHelper,
-            connectorDefinitionSpecificationHandler,
-            streamGenerationRepository,
-            catalogGenerationSetter,
-            catalogValidator,
-            notificationHelper,
-            streamStatusesService,
-            connectionTimelineEventService,
-            connectionTimelineEventHelper,
-            statePersistence,
-            sourceService,
-            destinationService,
-            connectionService,
-            workspaceService,
-            destinationCatalogGenerator,
-            catalogConverter,
-            applySchemaChangeHelper,
-            apiPojoConverters,
-            connectionSchedulerHelper,
-            mapperSecretHelper,
-            metricClient,
-            licenseEntitlementChecker,
-            contextBuilder,
-            airbyteEdition).getGeographyFromConnectionCreateOrWorkspace(connectionCreate);
-
-        assertEquals(airbyteEdition == Configs.AirbyteEdition.CLOUD ? DataplaneConstantsKt.GEOGRAPHY_US : DataplaneConstantsKt.GEOGRAPHY_AUTO,
-            geography);
       }
 
       @Test
@@ -1871,6 +1766,8 @@ class ConnectionsHandlerTest {
             .withManual(false);
 
         when(connectionService.getStandardSync(standardSync.getConnectionId())).thenReturn(standardSync);
+        when(entitlementService.checkEntitlement(any(), any()))
+            .thenReturn(new EntitlementResult(PlatformSubOneHourSyncFrequency.INSTANCE.getFeatureId(), true, null));
 
         final ConnectionRead actualConnectionRead = connectionsHandler.updateConnection(connectionUpdate, null, false);
 
@@ -1978,6 +1875,29 @@ class ConnectionsHandlerTest {
         final StandardSync expectedPersistedSync = Jsons.clone(standardSync)
             .withCatalog(expectedPersistedCatalog)
             .withFieldSelectionData(catalogConverter.getFieldSelectionData(catalogForUpdate));
+
+        when(connectionService.getStandardSync(standardSync.getConnectionId())).thenReturn(standardSync);
+
+        final ConnectionRead actualConnectionRead = connectionsHandler.updateConnection(connectionUpdate, null, false);
+
+        assertEquals(expectedRead, actualConnectionRead);
+        verify(connectionService).writeStandardSync(expectedPersistedSync);
+        verify(eventRunner).update(connectionUpdate.getConnectionId());
+      }
+
+      @Test
+      void testUpdateConnectionPatchDestinationCatalogId()
+          throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
+        final UUID newDestinationCatalogId = UUID.randomUUID();
+        final ConnectionUpdate connectionUpdate = new ConnectionUpdate()
+            .connectionId(standardSync.getConnectionId())
+            .destinationCatalogId(newDestinationCatalogId);
+
+        final ConnectionRead expectedRead = ConnectionHelpers.generateExpectedConnectionRead(standardSync)
+            .destinationCatalogId(newDestinationCatalogId);
+
+        final StandardSync expectedPersistedSync = Jsons.clone(standardSync)
+            .withDestinationCatalogId(newDestinationCatalogId);
 
         when(connectionService.getStandardSync(standardSync.getConnectionId())).thenReturn(standardSync);
 
@@ -2222,8 +2142,7 @@ class ConnectionsHandlerTest {
             .syncCatalog(catalogForUpdate)
             .resourceRequirements(resourceRequirements)
             .sourceCatalogId(newSourceCatalogId)
-            .operationIds(List.of(operationId, otherOperationId))
-            .geography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .operationIds(List.of(operationId, otherOperationId));
 
         final ConfiguredAirbyteCatalog expectedPersistedCatalog = ConnectionHelpers.generateBasicConfiguredAirbyteCatalog();
         expectedPersistedCatalog.getStreams().get(0).getStream().withName(AZKABAN_USERS);
@@ -2238,8 +2157,7 @@ class ConnectionsHandlerTest {
             .withFieldSelectionData(catalogConverter.getFieldSelectionData(catalogForUpdate))
             .withResourceRequirements(apiPojoConverters.resourceRequirementsToInternal(resourceRequirements))
             .withSourceCatalogId(newSourceCatalogId)
-            .withOperationIds(List.of(operationId, otherOperationId))
-            .withGeography(DataplaneConstantsKt.GEOGRAPHY_EU);
+            .withOperationIds(List.of(operationId, otherOperationId));
 
         when(connectionService.getStandardSync(standardSync.getConnectionId())).thenReturn(standardSync);
 
@@ -2255,7 +2173,6 @@ class ConnectionsHandlerTest {
             standardSync.getDestinationId(),
             standardSync.getOperationIds(),
             newSourceCatalogId,
-            standardSync.getGeography(),
             false,
             standardSync.getNotifySchemaChanges(),
             standardSync.getNotifySchemaChangesByEmail(),
@@ -2420,6 +2337,193 @@ class ConnectionsHandlerTest {
         verify(statePersistence).bulkDelete(moreComplexCatalogSync.getConnectionId(), expectedStreams);
       }
 
+      @ParameterizedTest
+      @CsvSource({
+        "true, true, true, true", // feature flag enabled, destination supports data activation, has destination catalog
+        "true, true, false, false", // feature flag enabled, destination supports data activation, no destination catalog - should throw
+        "true, false, false, true", // feature flag enabled, destination doesn't support data activation, no destination catalog
+        "false, true, true, true", // feature flag disabled, destination supports data activation, has destination catalog
+        "false, true, false, true", // feature flag disabled, destination supports data activation, no destination catalog
+        "false, false, false, true", // feature flag disabled, destination doesn't support data activation, no destination catalog
+      })
+      void testUpdateConnectionValidatesDestinationCatalog(final boolean featureFlagEnabled,
+                                                           final boolean destinationSupportsDataActivation,
+                                                           final boolean hasDestinationCatalogInUpdate,
+                                                           final boolean shouldSucceed)
+          throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
+
+        final AirbyteCatalog catalogForUpdate = ConnectionHelpers.generateBasicApiCatalog();
+        final ConnectionUpdate connectionUpdate = new ConnectionUpdate()
+            .connectionId(standardSync.getConnectionId())
+            .syncCatalog(catalogForUpdate);
+
+        final @Nullable UUID destinationCatalogIdInUpdate = hasDestinationCatalogInUpdate ? UUID.randomUUID() : null;
+
+        // Set destination catalog ID in the update if specified
+        if (hasDestinationCatalogInUpdate) {
+          connectionUpdate.destinationCatalogId(destinationCatalogIdInUpdate);
+          when(catalogService.getActorCatalogById(destinationCatalogIdInUpdate))
+              .thenReturn(new ActorCatalog().withId(destinationCatalogIdInUpdate).withCatalog(Jsons.emptyObject()));
+        }
+
+        when(featureFlagClient.boolVariation(eq(EnableDestinationCatalogValidation.INSTANCE), any()))
+            .thenReturn(featureFlagEnabled);
+        when(actorDefinitionVersionHelper.getSourceVersion(any(), any(), any())).thenReturn(
+            new ActorDefinitionVersion().withSupportsDataActivation(false));
+        when(actorDefinitionVersionHelper.getDestinationVersion(any(), any(), any())).thenReturn(
+            new ActorDefinitionVersion().withSupportsDataActivation(destinationSupportsDataActivation));
+
+        if (shouldSucceed) {
+          // Connection should be updated successfully
+          final ConnectionRead actualRead = connectionsHandler.updateConnection(connectionUpdate, null, false);
+          final ConnectionRead expectedRead = ConnectionHelpers.generateExpectedConnectionRead(standardSync)
+              .syncCatalog(catalogForUpdate)
+              .destinationCatalogId(destinationCatalogIdInUpdate);
+          assertEquals(expectedRead, actualRead);
+        } else {
+          // Should throw DestinationCatalogRequiredProblem
+          assertThrows(DestinationCatalogRequiredProblem.class, () -> connectionsHandler.updateConnection(connectionUpdate, null, false));
+        }
+      }
+
+    }
+
+    @Nested
+    class ValidateCatalogWithDestinationCatalog {
+
+      @Test
+      void testValidateCatalogWithDestinationCatalogSuccess() throws JsonValidationException {
+        // Create test data
+        final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
+        catalog.getStreams().getFirst().getConfig().destinationObjectName("test_table");
+
+        final ConfiguredAirbyteCatalog configuredCatalog = catalogConverter.toConfiguredInternal(catalog);
+
+        final JsonNode destinationSchema = ConnectionHelpers.generateBasicJsonSchema();
+        ((ObjectNode) destinationSchema).put("additionalProperties", false);
+
+        final DestinationCatalog destinationCatalog = new DestinationCatalog(List.of(
+            new DestinationOperation(
+                "test_table",
+                io.airbyte.config.DestinationSyncMode.APPEND,
+                destinationSchema,
+                null)));
+
+        final CatalogGenerationResult generationResult = new CatalogGenerationResult(configuredCatalog, Map.of());
+
+        // Set up mocks
+        when(destinationCatalogGenerator.generateDestinationCatalog(configuredCatalog)).thenReturn(generationResult);
+
+        // Should not throw any exception
+        assertDoesNotThrow(() -> connectionsHandler.validateCatalogWithDestinationCatalog(catalog, destinationCatalog));
+      }
+
+      @Test
+      void testValidateCatalogWithDestinationCatalogMissingObjectName() throws JsonValidationException {
+        // Create test data with missing destination object name
+        final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
+        // Don't set destination object name - it will be null
+
+        final ConfiguredAirbyteCatalog configuredCatalog = catalogConverter.toConfiguredInternal(catalog);
+
+        final DestinationCatalog destinationCatalog = new DestinationCatalog(List.of());
+
+        final CatalogGenerationResult generationResult = new CatalogGenerationResult(configuredCatalog, Map.of());
+
+        // Set up mocks
+        when(destinationCatalogGenerator.generateDestinationCatalog(configuredCatalog)).thenReturn(generationResult);
+
+        // Should throw DestinationCatalogMissingObjectNameProblem
+        assertThrows(DestinationCatalogMissingObjectNameProblem.class,
+            () -> connectionsHandler.validateCatalogWithDestinationCatalog(catalog, destinationCatalog));
+      }
+
+      @Test
+      void testValidateCatalogWithDestinationCatalogInvalidOperation() throws JsonValidationException {
+        // Create test data with invalid operation (missing from destination catalog)
+        final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
+        catalog.getStreams().getFirst().getConfig().destinationObjectName("test_table");
+
+        final ConfiguredAirbyteCatalog configuredCatalog = catalogConverter.toConfiguredInternal(catalog);
+
+        // No operations defined
+        final DestinationCatalog destinationCatalog = new DestinationCatalog(List.of());
+
+        final CatalogGenerationResult generationResult = new CatalogGenerationResult(configuredCatalog, Map.of());
+
+        // Set up mocks
+        when(destinationCatalogGenerator.generateDestinationCatalog(configuredCatalog)).thenReturn(generationResult);
+
+        // Should throw DestinationCatalogInvalidOperationProblem
+        assertThrows(DestinationCatalogInvalidOperationProblem.class,
+            () -> connectionsHandler.validateCatalogWithDestinationCatalog(catalog, destinationCatalog));
+      }
+
+      @Test
+      void testValidateCatalogWithDestinationCatalogMissingRequiredField() throws JsonValidationException {
+        // Create test data with missing required field
+        final AirbyteCatalog catalog = ConnectionHelpers.generateBasicApiCatalog();
+        catalog.getStreams().getFirst().getConfig().destinationObjectName("test_table");
+
+        final ConfiguredAirbyteCatalog configuredCatalog = catalogConverter.toConfiguredInternal(catalog);
+
+        final JsonNode destinationSchema = Jsons.jsonNode(Map.of(
+            "type", "object",
+            "properties", Map.of(
+                "field1", Map.of("type", "string"),
+                "field2", Map.of("type", "string")),
+            "required", List.of("field2") // field2 is required
+        ));
+
+        final DestinationCatalog destinationCatalog = new DestinationCatalog(List.of(
+            new DestinationOperation(
+                "test_table",
+                io.airbyte.config.DestinationSyncMode.APPEND,
+                destinationSchema,
+                null)));
+
+        final CatalogGenerationResult generationResult = new CatalogGenerationResult(configuredCatalog, Map.of());
+
+        // Set up mocks
+        when(destinationCatalogGenerator.generateDestinationCatalog(configuredCatalog)).thenReturn(generationResult);
+
+        // Should throw DestinationCatalogMissingRequiredFieldProblem
+        assertThrows(DestinationCatalogMissingRequiredFieldProblem.class,
+            () -> connectionsHandler.validateCatalogWithDestinationCatalog(catalog, destinationCatalog));
+      }
+
+      @Test
+      void testValidateCatalogWithDestinationCatalogInvalidAdditionalField() throws JsonValidationException {
+        // Create test data with additional field not allowed
+        final AirbyteCatalog catalog = ConnectionHelpers.generateApiCatalogWithTwoFields();
+        catalog.getStreams().getFirst().getConfig().destinationObjectName("test_table");
+
+        final ConfiguredAirbyteCatalog configuredCatalog = catalogConverter.toConfiguredInternal(catalog);
+
+        final JsonNode destinationSchema = Jsons.jsonNode(Map.of(
+            "type", "object",
+            "properties", Map.of(
+                FIELD_NAME, Map.of("type", "string")),
+            "additionalProperties", false // Additional properties not allowed
+        ));
+
+        final DestinationCatalog destinationCatalog = new DestinationCatalog(List.of(
+            new DestinationOperation(
+                "test_table",
+                io.airbyte.config.DestinationSyncMode.APPEND,
+                destinationSchema,
+                null)));
+
+        final CatalogGenerationResult generationResult = new CatalogGenerationResult(configuredCatalog, Map.of());
+
+        // Set up mocks
+        when(destinationCatalogGenerator.generateDestinationCatalog(configuredCatalog)).thenReturn(generationResult);
+
+        // Should throw DestinationCatalogInvalidAdditionalFieldProblem
+        assertThrows(DestinationCatalogInvalidAdditionalFieldProblem.class,
+            () -> connectionsHandler.validateCatalogWithDestinationCatalog(catalog, destinationCatalog));
+      }
+
     }
 
   }
@@ -2456,8 +2560,7 @@ class ConnectionsHandlerTest {
           destinationCatalogGenerator, catalogConverter, applySchemaChangeHelper,
           apiPojoConverters, connectionSchedulerHelper, mapperSecretHelper,
           metricClient, licenseEntitlementChecker,
-          contextBuilder,
-          Configs.AirbyteEdition.COMMUNITY);
+          contextBuilder);
     }
 
     private Attempt generateMockAttemptWithStreamStats(final Instant attemptTime, final List<Map<List<String>, Long>> streamsToRecordsSynced) {
@@ -2481,7 +2584,8 @@ class ConnectionsHandlerTest {
     }
 
     private Job generateMockJob(final UUID connectionId, final Attempt attempt) {
-      return new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.RUNNING, 1001L, 1000L, 1002L, true);
+      return new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.RUNNING, 1001L, 1000L,
+          1002L, true);
     }
 
     @Nested
@@ -2495,8 +2599,8 @@ class ConnectionsHandlerTest {
         final long jobOneId = 1L;
         final long jobTwoId = 2L;
 
-        final Job jobOne = new Job(1, ConfigType.SYNC, connectionId.toString(), null, List.of(), JobStatus.SUCCEEDED, 0L, 0L, 0L, true);
-        final Job jobTwo = new Job(2, ConfigType.REFRESH, connectionId.toString(), null, List.of(), JobStatus.FAILED, 0L, 0L, 0L, true);
+        final Job jobOne = new Job(1, ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.SUCCEEDED, 0L, 0L, 0L, true);
+        final Job jobTwo = new Job(2, ConfigType.REFRESH, connectionId.toString(), new JobConfig(), List.of(), JobStatus.FAILED, 0L, 0L, 0L, true);
 
         when(jobPersistence.listJobs(
             Job.SYNC_REPLICATION_TYPES,
@@ -2599,25 +2703,25 @@ class ConnectionsHandlerTest {
         final Attempt attempt1 = generateMockAttemptWithStreamStats(startTime.plus(1, ChronoUnit.DAYS),
             List.of(Map.of(List.of(streamNamespace, streamName),
                 attempt1Records))); // 100 records
-        final AttemptWithJobInfo attemptWithJobInfo1 = new AttemptWithJobInfo(attempt1, generateMockJob(connectionId, attempt1));
+        final AttemptWithJobInfo attemptWithJobInfo1 = AttemptWithJobInfo.fromJob(attempt1, generateMockJob(connectionId, attempt1));
 
         // Second Attempt - Same Day as First, same stream as first
         final Attempt attempt2 = generateMockAttemptWithStreamStats(startTime.plus(1, ChronoUnit.DAYS),
             List.of(Map.of(List.of(streamNamespace, streamName),
                 attempt2Records))); // 100 records
-        final AttemptWithJobInfo attemptWithJobInfo2 = new AttemptWithJobInfo(attempt2, generateMockJob(connectionId, attempt2));
+        final AttemptWithJobInfo attemptWithJobInfo2 = AttemptWithJobInfo.fromJob(attempt2, generateMockJob(connectionId, attempt2));
 
         // Third Attempt - Same Day, different stream
         final Attempt attempt3 = generateMockAttemptWithStreamStats(startTime.plus(1, ChronoUnit.DAYS),
             List.of(Map.of(List.of(streamNamespace, streamName2),
                 attempt3Records))); // 100 records
-        final AttemptWithJobInfo attemptWithJobInfo3 = new AttemptWithJobInfo(attempt3, generateMockJob(connectionId, attempt3));
+        final AttemptWithJobInfo attemptWithJobInfo3 = AttemptWithJobInfo.fromJob(attempt3, generateMockJob(connectionId, attempt3));
 
         // Fourth Attempt - Different day, first stream
         final Attempt attempt4 = generateMockAttemptWithStreamStats(startTime.plus(2, ChronoUnit.DAYS),
             List.of(Map.of(List.of(streamNamespace, streamName),
                 attempt4Records))); // 100 records
-        final AttemptWithJobInfo attemptWithJobInfo4 = new AttemptWithJobInfo(attempt4, generateMockJob(connectionId, attempt4));
+        final AttemptWithJobInfo attemptWithJobInfo4 = AttemptWithJobInfo.fromJob(attempt4, generateMockJob(connectionId, attempt4));
 
         final List<AttemptWithJobInfo> attempts = Arrays.asList(attemptWithJobInfo1, attemptWithJobInfo2, attemptWithJobInfo3, attemptWithJobInfo4);
 
@@ -2696,8 +2800,7 @@ class ConnectionsHandlerTest {
           destinationCatalogGenerator,
           catalogConverter, applySchemaChangeHelper, apiPojoConverters, connectionSchedulerHelper, mapperSecretHelper,
           metricClient, licenseEntitlementChecker,
-          contextBuilder,
-          Configs.AirbyteEdition.COMMUNITY);
+          contextBuilder);
     }
 
     @Test
@@ -3111,9 +3214,10 @@ class ConnectionsHandlerTest {
       failureSummary.setFailures(List.of(new FailureReason().withFailureOrigin(FailureReason.FailureOrigin.DESTINATION)));
       final Attempt failedAttempt = new Attempt(0, 0, null, null, null, AttemptStatus.FAILED, null, failureSummary, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.RUNNING, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(failedAttempt), JobStatus.FAILED, 901L, 900L, 902L, true),
-          new Job(2L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.RUNNING, 1001L, 1000L, 1002L, true),
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(failedAttempt), JobStatus.FAILED, 901L, 900L, 902L,
+              true),
+          new Job(2L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3134,8 +3238,9 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.RUNNING, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.RUNNING, 1001L, 1000L, 1002L, true),
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L,
+              true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3154,7 +3259,8 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L,
+              true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3175,7 +3281,8 @@ class ConnectionsHandlerTest {
           .withFailureOrigin(FailureReason.FailureOrigin.DESTINATION)));
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.FAILED, null, failureSummary, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.FAILED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.FAILED, 801L, 800L, 802L,
+              true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3194,7 +3301,8 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L,
+              true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3213,7 +3321,8 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.SUCCEEDED, 801L, 800L, 802L,
+              true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3247,9 +3356,9 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.RESET_CONNECTION, connectionId.toString(), null, List.of(attempt),
+          new Job(0L, JobConfig.ConfigType.RESET_CONNECTION, connectionId.toString(), new JobConfig(), List.of(attempt),
               JobStatus.SUCCEEDED, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3267,9 +3376,9 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.FAILED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.RESET_CONNECTION, connectionId.toString(), null, List.of(attempt),
+          new Job(0L, JobConfig.ConfigType.RESET_CONNECTION, connectionId.toString(), new JobConfig(), List.of(attempt),
               JobStatus.FAILED, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3287,9 +3396,9 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.CLEAR, connectionId.toString(), null, List.of(attempt),
+          new Job(0L, JobConfig.ConfigType.CLEAR, connectionId.toString(), new JobConfig(), List.of(attempt),
               JobStatus.SUCCEEDED, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3307,9 +3416,9 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.FAILED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.CLEAR, connectionId.toString(), null, List.of(attempt),
+          new Job(0L, JobConfig.ConfigType.CLEAR, connectionId.toString(), new JobConfig(), List.of(attempt),
               JobStatus.FAILED, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3328,9 +3437,10 @@ class ConnectionsHandlerTest {
       final Attempt resetAttempt = new Attempt(0, 0, null, null, null, AttemptStatus.FAILED, null, null, 0, 0, 0L);
       final Attempt successAttempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.RESET_CONNECTION, connectionId.toString(), null, List.of(resetAttempt),
+          new Job(0L, JobConfig.ConfigType.RESET_CONNECTION, connectionId.toString(), new JobConfig(), List.of(resetAttempt),
               JobStatus.CANCELLED, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(successAttempt), JobStatus.SUCCEEDED, 801L, 800L, 802L,
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(successAttempt), JobStatus.SUCCEEDED, 801L, 800L,
+              802L,
               true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
@@ -3349,8 +3459,9 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.FAILED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.FAILED, 1001L, 1000L, 1002L, true),
-          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, null, JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
+          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.FAILED, 1001L, 1000L, 1002L,
+              true),
+          new Job(1L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(), JobStatus.SUCCEEDED, 801L, 800L, 802L, true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3368,7 +3479,7 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt failedAttempt = new Attempt(0, 0, null, null, null, AttemptStatus.FAILED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(failedAttempt),
+          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(failedAttempt),
               JobStatus.CANCELLED, 1001L, 1000L, 1002L, true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
@@ -3387,7 +3498,8 @@ class ConnectionsHandlerTest {
       final UUID connectionId = standardSync.getConnectionId();
       final Attempt attempt = new Attempt(0, 0, null, null, null, AttemptStatus.SUCCEEDED, null, null, 0, 0, 0L);
       final List<Job> jobs = List.of(
-          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), null, List.of(attempt), JobStatus.SUCCEEDED, 1001L, 1000L, 1002L, true));
+          new Job(0L, JobConfig.ConfigType.SYNC, connectionId.toString(), new JobConfig(), List.of(attempt), JobStatus.SUCCEEDED, 1001L, 1000L, 1002L,
+              true));
       when(jobPersistence.listJobsLight(REPLICATION_TYPES,
           connectionId.toString(), 10))
               .thenReturn(jobs);
@@ -3461,7 +3573,7 @@ class ConnectionsHandlerTest {
         .withId(UUID.randomUUID());
 
     @BeforeEach
-    void setup() throws IOException, JsonValidationException, ConfigNotFoundException, io.airbyte.data.exceptions.ConfigNotFoundException,
+    void setup() throws IOException, JsonValidationException, ConfigNotFoundException, ConfigNotFoundException,
         io.airbyte.config.persistence.ConfigNotFoundException {
       airbyteCatalog.getStreams().get(0).withSupportedSyncModes(List.of(io.airbyte.protocol.models.v0.SyncMode.FULL_REFRESH));
       standardSync = new StandardSync()
@@ -3523,13 +3635,12 @@ class ConnectionsHandlerTest {
           destinationCatalogGenerator,
           catalogConverter, applySchemaChangeHelper,
           apiPojoConverters, connectionSchedulerHelper, mapperSecretHelper, metricClient, licenseEntitlementChecker,
-          contextBuilder,
-          Configs.AirbyteEdition.COMMUNITY);
+          contextBuilder);
     }
 
     @Test
     void testAutoPropagateSchemaChange()
-        throws IOException, ConfigNotFoundException, JsonValidationException, io.airbyte.data.exceptions.ConfigNotFoundException,
+        throws IOException, ConfigNotFoundException, JsonValidationException, ConfigNotFoundException,
         io.airbyte.config.persistence.ConfigNotFoundException {
       // Somehow standardSync is being mutated in the test (the catalog is changed) and verifying that the
       // notification function is called correctly requires the original object.
@@ -3580,7 +3691,7 @@ class ConnectionsHandlerTest {
 
     @Test
     void testAutoPropagateColumnsOnly()
-        throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.data.exceptions.ConfigNotFoundException,
+        throws JsonValidationException, ConfigNotFoundException, IOException, ConfigNotFoundException,
         io.airbyte.config.persistence.ConfigNotFoundException {
       // See test above for why this part is necessary.
       final StandardSync originalSync = Jsons.clone(standardSync);
@@ -3616,7 +3727,7 @@ class ConnectionsHandlerTest {
 
     @Test
     void testSendingNotificationToManuallyApplySchemaChange()
-        throws JsonValidationException, IOException, io.airbyte.data.exceptions.ConfigNotFoundException,
+        throws JsonValidationException, IOException, ConfigNotFoundException,
         io.airbyte.config.persistence.ConfigNotFoundException {
       // Override the non-breaking changes preference to ignore so that the changes are not
       // auto-propagated, but needs to be manually applied.
@@ -3655,7 +3766,7 @@ class ConnectionsHandlerTest {
 
     @Test
     void testSendingNotificationToManuallyApplySchemaChangeWithPropagationDisabled()
-        throws JsonValidationException, IOException, io.airbyte.data.exceptions.ConfigNotFoundException,
+        throws JsonValidationException, IOException, ConfigNotFoundException,
         io.airbyte.config.persistence.ConfigNotFoundException {
       // Override the non-breaking changes preference to DISABLE so that the changes are not
       // auto-propagated, but needs to be manually applied.
@@ -3697,7 +3808,7 @@ class ConnectionsHandlerTest {
         throws JsonValidationException, ConfigNotFoundException, IOException, io.airbyte.config.persistence.ConfigNotFoundException {
       final Field newField = Field.of(A_DIFFERENT_COLUMN, JsonSchemaType.STRING);
       final var catalogWithDiff =
-          io.airbyte.protocol.models.CatalogHelpers.createAirbyteCatalog(SHOES, Field.of(SKU, JsonSchemaType.STRING), newField);
+          io.airbyte.protocol.models.v0.CatalogHelpers.createAirbyteCatalog(SHOES, Field.of(SKU, JsonSchemaType.STRING), newField);
       final ActorCatalog discoveredCatalog = new ActorCatalog()
           .withCatalog(Jsons.jsonNode(catalogWithDiff))
           .withCatalogHash("")
@@ -3755,7 +3866,7 @@ class ConnectionsHandlerTest {
 
       final Field newField = Field.of(A_DIFFERENT_COLUMN, JsonSchemaType.STRING);
       final var catalogWithDiff =
-          io.airbyte.protocol.models.CatalogHelpers.createAirbyteCatalog(SHOES, Field.of(SKU, JsonSchemaType.STRING), newField);
+          io.airbyte.protocol.models.v0.CatalogHelpers.createAirbyteCatalog(SHOES, Field.of(SKU, JsonSchemaType.STRING), newField);
       final ActorCatalog discoveredCatalog = new ActorCatalog()
           .withCatalog(Jsons.jsonNode(catalogWithDiff))
           .withCatalogHash("")
@@ -3869,8 +3980,7 @@ class ConnectionsHandlerTest {
           connectionSchedulerHelper,
           mapperSecretHelper, metricClient,
           licenseEntitlementChecker,
-          contextBuilder,
-          Configs.AirbyteEdition.COMMUNITY);
+          contextBuilder);
     }
 
     @Test
@@ -3910,8 +4020,8 @@ class ConnectionsHandlerTest {
           jobId,
           configType,
           connectionId.toString(),
-          null,
-          null,
+          new JobConfig(),
+          List.of(),
           jobStatus,
           startedAt.toEpochMilli(),
           createdAt.toEpochMilli(),
@@ -3919,13 +4029,13 @@ class ConnectionsHandlerTest {
           true);
       final List<Job> jobList = List.of(job);
       final JobRead jobRead = new JobRead()
-          .id(job.getId())
+          .id(job.id)
           .configType(jobConfigType)
           .status(apiJobStatus)
           .aggregatedStats(jobAggregatedStats)
-          .createdAt(job.getCreatedAtInSecond())
-          .updatedAt(job.getUpdatedAtInSecond())
-          .startedAt(job.getStartedAtInSecond().orElseThrow())
+          .createdAt(job.createdAtInSecond)
+          .updatedAt(job.updatedAtInSecond)
+          .startedAt(job.startedAtInSecond)
           .streamAggregatedStats(List.of(
               new StreamStats()
                   .streamName(stream1Name)
